--- a/src/app/components/shared/add product/add-product.component.html
+++ b/src/app/components/shared/add product/add-product.component.html
@@ -5,31 +5,18 @@
                 <div class="d-flex flex-column w-100">
                     <span class="p-float-label col-11">
                         <h6 class="addressLabel ps-0">Name</h6>
-                        <input
-                            type="text"
-                            pInputText
-                            class="w-full"
-                            formControlName="name"
-                        />
+                        <input type="text" pInputText class="w-full" formControlName="name" />
                     </span>
                     <span class="p-float-label">
                         <h6 class="addressLabel ps-3">Brand</h6>
                         <div class="d-flex gap-2">
                             <div class="col-11 pt-0">
-                                <p-dropdown
-                                    [options]="brandOption"
-                                    optionLabel="name"
-                                    [autoDisplayFirst]="false"
-                                    formControlName="brand"
-                                >
+                                <p-dropdown [options]="brandOption" optionLabel="name" [autoDisplayFirst]="false"
+                                    formControlName="brand">
                                 </p-dropdown>
                             </div>
                             <div class="col-1 d-flex align-items-center pt-0">
-                                <i
-                                    class="bi bi-plus-circle-dotted"
-                                    (click)="onAddBrand()"
-                                    pTooltip="Add new Brand"
-                                ></i>
+                                <i class="bi bi-plus-circle-dotted" (click)="onAddBrand()" pTooltip="Add new Brand"></i>
                             </div>
                         </div>
                     </span>
@@ -37,21 +24,13 @@
                         <h6 class="addressLabel ps-3">Category</h6>
                         <div class="d-flex gap-2">
                             <div class="col-11 pt-0">
-                                <p-dropdown
-                                    [options]="categoryOption"
-                                    optionLabel="name"
-                                    [autoDisplayFirst]="false"
-                                    formControlName="category"
-                                    (onChange)="onCategoryChange($event)"
-                                >
+                                <p-dropdown [options]="categoryOption" optionLabel="name" [autoDisplayFirst]="false"
+                                    formControlName="category" (onChange)="onCategoryChange($event)">
                                 </p-dropdown>
                             </div>
                             <div class="col-1 d-flex align-items-center pt-0">
-                                <i
-                                    class="bi bi-plus-circle-dotted"
-                                    (click)="onAddCategory()"
-                                    pTooltip="Add new Category"
-                                ></i>
+                                <i class="bi bi-plus-circle-dotted" (click)="onAddCategory()"
+                                    pTooltip="Add new Category"></i>
                             </div>
                         </div>
                     </span>
@@ -59,20 +38,13 @@
                         <h6 class="addressLabel ps-3">Sub category</h6>
                         <div class="d-flex gap-2">
                             <div class="col-11 pt-0">
-                                <p-dropdown
-                                    [options]="subCategoryOption"
-                                    optionLabel="name"
-                                    [autoDisplayFirst]="false"
-                                    formControlName="subCategory"
-                                >
+                                <p-dropdown [options]="subCategoryOption" optionLabel="name" [autoDisplayFirst]="false"
+                                    formControlName="subCategory">
                                 </p-dropdown>
                             </div>
                             <div class="col-1 d-flex align-items-center pt-0">
-                                <i
-                                    class="bi bi-plus-circle-dotted"
-                                    (click)="onAddSubCategory()"
-                                    pTooltip="Add new Sub Category"
-                                ></i>
+                                <i class="bi bi-plus-circle-dotted" (click)="onAddSubCategory()"
+                                    pTooltip="Add new Sub Category"></i>
                             </div>
                         </div>
                     </span>
@@ -82,13 +54,8 @@
                             Color <small>(Optional)</small>
                         </h6>
                         <div class="d-flex gap-2">
-                            <p-multiSelect
-                                class="w-100"
-                                [options]="attribute.COLOR"
-                                optionLabel="name"
-                                formControlName="color"
-                                display="chip"
-                            >
+                            <p-multiSelect class="w-100" [options]="attribute.COLOR" optionLabel="name"
+                                formControlName="color" display="chip">
                             </p-multiSelect>
                         </div>
                     </span>
@@ -98,13 +65,8 @@
                             Size <small>(Optional)</small>
                         </h6>
                         <div class="d-flex gap-2">
-                            <p-multiSelect
-                                class="w-100"
-                                [options]="attribute.SIZE"
-                                optionLabel="name"
-                                formControlName="size"
-                                display="chip"
-                            >
+                            <p-multiSelect class="w-100" [options]="attribute.SIZE" optionLabel="name"
+                                formControlName="size" display="chip">
                             </p-multiSelect>
                         </div>
                     </span>
@@ -114,80 +76,43 @@
                         <div></div>
                         <div class="row px-2">
                             <div class="col-6 p-1">
-                                <p class="mb-1">Width</p>
-                                <input
-                                    type="text"
-                                    pInputText
-                                    class="w-full"
-                                    placeholder="Textbox 1"
-                                />
+                                <p class="mb-1">Length</p>
+                                <input type="text" pInputText class="w-full" formControlName="length" />
                             </div>
 
                             <div class="col-6 p-1">
-                                <p class="mb-1">Title</p>
-                                <input
-                                    type="text"
-                                    pInputText
-                                    class="w-full"
-                                    placeholder="Textbox 2"
-                                />
+                                <p class="mb-1">Height</p>
+                                <input type="text" pInputText class="w-full" formControlName="height" />
                             </div>
                         </div>
                         <div class="row px-2">
                             <div class="col-6 p-1">
-                                <p class="mb-1">Title</p>
-                                <input
-                                    type="text"
-                                    pInputText
-                                    class="w-full"
-                                    placeholder="Textbox 3"
-                                />
+                                <p class="mb-1">Width</p>
+                                <input type="text" pInputText class="w-full" formControlName="width" />
                             </div>
 
                             <div class="col-6 p-1">
-                                <p class="mb-1">Title</p>
-                                <input
-                                    type="text"
-                                    pInputText
-                                    class="w-full"
-                                    placeholder="Textbox 4"
-                                />
+                                <p class="mb-1">Weight</p>
+                                <input type="text" pInputText class="w-full" formControlName="weight" />
                             </div>
                         </div>
                     </span>
                     <span class="p-float-label col-11">
                         <h6 class="addressLabel ps-0">Price</h6>
-                        <p-inputNumber
-                            formControlName="price"
-                            mode="currency"
-                            currency="VND"
-                            locale="jp-JP"
-                        >
+                        <p-inputNumber formControlName="price" mode="currency" currency="VND" locale="jp-JP">
                         </p-inputNumber>
                     </span>
 
                     <span class="p-float-label col-11">
                         <h6 class="addressLabel ps-0">Detail</h6>
-                        <textarea
-                            formControlName="detail"
-                            class="w-100"
-                            name=""
-                            id="textarea"
-                            pInputTextarea
-                            [autoResize]="true"
-                        ></textarea>
+                        <textarea formControlName="detail" class="w-100" name="" id="textarea" pInputTextarea
+                            [autoResize]="true"></textarea>
                     </span>
 
                     <span class="p-float-label col-11">
                         <h6 class="addressLabel ps-0">Description</h6>
-                        <textarea
-                            formControlName="description"
-                            class="w-100"
-                            name=""
-                            id="textarea"
-                            pInputTextarea
-                            [autoResize]="true"
-                        ></textarea>
+                        <textarea formControlName="description" class="w-100" name="" id="textarea" pInputTextarea
+                            [autoResize]="true"></textarea>
                     </span>
                 </div>
 
@@ -198,18 +123,9 @@
                         </div>
                     </p-divider>
                     <div class="d-flex justify-content-center w-100">
-                        <p-fileUpload
-                            name="file[]"
-                            class="w-100 my-1"
-                            name="demo[]"
-                            chooseLabel="Select image"
-                            cancelLabel="Cancel"
-                            [showUploadButton]="false"
-                            [multiple]="true"
-                            [maxFileSize]="10000000"
-                            (onSelect)="onSelectFiles($event)"
-                            (onRemove)="onRemoveFile($event)"
-                        >
+                        <p-fileUpload name="file[]" class="w-100 my-1" name="demo[]" chooseLabel="Select image"
+                            cancelLabel="Cancel" [showUploadButton]="false" [multiple]="true" [maxFileSize]="10000000"
+                            (onSelect)="onSelectFiles($event)" (onRemove)="onRemoveFile($event)">
                             <ng-template pTemplate="content">
                                 <!-- <ul *ngIf="uploadedFiles.length">
             <li *ngFor="let file of uploadedFiles">
@@ -221,14 +137,8 @@
                     </div>
                 </div>
                 <div class="button-group d-flex justify-content-center mt-2">
-                    <button
-                        pButton
-                        pRipple
-                        label="Create new Product"
-                        type="submit"
-                        (click)="onAddProduct()"
-                        [disabled]="addProductForm.invalid || imgs.length == 0"
-                    ></button>
+                    <button pButton pRipple label="Create new Product" type="submit" (click)="onAddProduct()"
+                        [disabled]="addProductForm.invalid || imgs.length == 0"></button>
                 </div>
             </form>
         </div>
