--- a/src/app/components/merchant-pages/live/live.component.html
+++ b/src/app/components/merchant-pages/live/live.component.html
@@ -3,8 +3,7 @@
         <div class="card">
             <div *ngIf="isOnLive" class="d-flex flex-wrap">
                 <div class="col-12 xl:col-8">
-                    Live here
-
+                    <video *ngIf="cameraFound" autoplay="true" id="videoElement"></video>
                 </div>
                 <div class="col-12 xl:col-4">
                     <div *ngFor="let item of  listProductForLive" class="mb-2">
@@ -26,15 +25,11 @@
                 </div>
             </div>
             <div *ngIf="!isOnLive" class="w-100 d-flex flex-wrap">
-                <div class="col-12 xl:col-6"> There is no live stream available at the moment.
+                <div class="col-12 xl:col-6">
+                    <h5>
 
-                    <h1>Access the Camera</h1>
-
-                    <video autoplay="true" id="videoElement"></video>
-                    <button *ngIf="!isOnLive" pButton pRipple label="Start Live Stream" class="p-button-success mr-2"
-                        (click)="isOnLive = true;getCamera()"></button>
-                </div>
-                <div class="col-12 xl:col-6">Select Product for Live
+                        Select Product for Live
+                    </h5>
                     <div *ngFor="let item of  listAllProduct" class="mb-2">
                         <div class="item-name d-flex justify-content-between align-items-center gap-4">
                             <p-checkbox [binary]="true" (onChange)="selectItem(item)"></p-checkbox>
@@ -51,6 +46,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-12 xl:col-6">
+                    <h5>
+
+                        There is no live stream available at the moment.
+                    </h5>
+
+
+                    <button pButton pRipple label="Start Live Stream" class="p-button-success mr-2"
+                        (click)="isOnLive = true;getCamera()"></button>
+                </div>
+
             </div>
         </div>
     </div>
