style: re-style live page

--- a/src/app/components/user-pages/landing/landing.component.html
+++ b/src/app/components/user-pages/landing/landing.component.html
@@ -3,7 +3,8 @@
         <section id="featured">
             <div class="main">
                 <div class="live-image">
-                    <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay" />
+                    <img src="https://plus.unsplash.com/premium_photo-1684529265466-38a66d9e9092?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="Gameplay" />
                     <div class="live-icon">LIVE</div>
                 </div>
                 <div class="featured-info">
@@ -13,12 +14,11 @@
                                 alt="Profile" />
                         </div>
                         <div class="info-section">
-                            <p class="featured-name">HelloWorld!</p>
-                            <p class="featured-game">Fortnite</p>
+                            <p class="featured-name">Old Spice Shop</p>
                             <div class="viewers">221 viewers</div>
                         </div>
                     </div>
-                    <div class="tags">
+                    <!-- <div class="tags">
                         <div class="live-lang">FPS</div>
                         <div class="live-lang">Battle Roayle</div>
                     </div>
@@ -26,13 +26,13 @@
                         We are shooting for these wins today! I know we can do
                         it! Check out my stream and hang out as I climb the
                         ranks!
-                    </p>
+                    </p> -->
                 </div>
             </div>
-            <div class="left1">
+            <!-- <div class="left1">
                 <div class="featured-content">
                     <i class="bi bi-chevron-left"></i>
-                    <img src="https://images.unsplash.com/photo-1450609283058-0ec52fa7eac4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                    <img src="https://plus.unsplash.com/premium_photo-1684529265466-38a66d9e9092?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                         alt="Channel" class="featured-channel" />
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 <div class="featured-content">
                     <img src="https://i.ytimg.com/vi/eLQGVkuv8oo/maxresdefault.jpg" alt="Gameplay"
                         class="featured-gameplay" />
-                    <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80"
+                    <img src="https://plus.unsplash.com/premium_photo-1684529265466-38a66d9e9092?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                         alt="Channel" class="featured-channel" />
                 </div>
             </div>
@@ -48,17 +48,17 @@
                 <div class="featured-content">
                     <img src="https://i0.wp.com/coin-drop.com/wp-content/uploads/Dying-Light-2-1-1.png?resize=1400%2C791"
                         alt="Gameplay" class="featured-gameplay" />
-                    <img src="https://images.unsplash.com/photo-1530268729831-4b0b9e170218?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                    <img src="https://plus.unsplash.com/premium_photo-1684529265466-38a66d9e9092?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                         alt="Channel" class="featured-channel" />
                 </div>
             </div>
             <div class="right1">
                 <div class="featured-content">
                     <i class="bi bi-chevron-right"></i>
-                    <img src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                    <img src="https://plus.unsplash.com/premium_photo-1684529265466-38a66d9e9092?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                         alt="Channel" class="featured-channel" />
                 </div>
-            </div>
+            </div> -->
         </section>
         <h2>Recommended live channels</h2>
         <section class="recommended-live">
@@ -67,8 +67,8 @@
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay"
-                            class="thumbnail" />
+                        <img src="https://plus.unsplash.com/premium_photo-1684529265466-38a66d9e9092?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Gameplay" class="thumbnail" />
                     </div>
                     <div class="live-info">
                         <div class="img-cropper">
@@ -92,8 +92,8 @@
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay"
-                            class="thumbnail" />
+                        <img src="https://plus.unsplash.com/premium_photo-1684529265466-38a66d9e9092?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Gameplay" class="thumbnail" />
                     </div>
                     <div class="live-info">
                         <div class="img-cropper">
@@ -117,8 +117,8 @@
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay"
-                            class="thumbnail" />
+                        <img src="https://plus.unsplash.com/premium_photo-1684529265466-38a66d9e9092?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Gameplay" class="thumbnail" />
                     </div>
                     <div class="live-info">
                         <div class="img-cropper">
@@ -142,8 +142,8 @@
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay"
-                            class="thumbnail" />
+                        <img src="https://plus.unsplash.com/premium_photo-1684529265466-38a66d9e9092?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Gameplay" class="thumbnail" />
                     </div>
                     <div class="live-info">
                         <div class="img-cropper">
@@ -167,8 +167,8 @@
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay"
-                            class="thumbnail" />
+                        <img src="https://plus.unsplash.com/premium_photo-1684529265466-38a66d9e9092?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Gameplay" class="thumbnail" />
                     </div>
                     <div class="live-info">
                         <div class="img-cropper">
